tests/errors/variant_flow/downcast_on_field_of_struct_errors.sim

            enum Sub: Copy + Drop { S1: unit S2: unit }
            enum Inner: Copy + Drop { A: Sub B: unit }
            struct Wrap: Copy + Drop { e: Inner }
            fn f(w: Wrap) {
              entry:
                switchEnum(w.e as A) [S1: s1, S2: s2]
              s1: return
              s2: return
            }
            